# DM_compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: DM_lib.md  draft.md  version.md
examples/: DM_binary_tree.c  binary_tree.c
examples/pre/: binary_tree.c  dm_binary_tree_pre.c  dm_lib.h
runtime/: CMakeLists.txt  Makefile
runtime/common/: handshake.h  parse.h  rdma.h  try.h
runtime/compute/: CMakeLists.txt  Makefile
runtime/compute/include/: addr.h  alloc.h  cache.h  context.h  global_addr.h  global_alloc.h  local_cache.h  offload.h  type.h
runtime/compute/src/: addr.c  alloc.c  cache-internal.h  cache.c  context-internal.h  context.c  local_cache.c  rdma.c  rdma.h  type.c
runtime/compute/tests/: main.c
runtime/compute_runtime/include/: AddressDependence.h  Cache.h  GlobalAddress.h  GlobalAllocator.h  Type.h
runtime/compute_runtime/lib/: Type.cpp
runtime/memory/: CMakeLists.txt  Makefile
runtime/memory/src/: alloc.c  alloc.h  context.c  context.h  main.c  main.h  rdma.c  rdma.h
test/: main.c  program  test.cpp  test.h
